--- a/crates/floxide-transform/Cargo.toml
+++ b/crates/floxide-transform/Cargo.toml
@@ -6,9 +6,10 @@ authors.workspace = true
 license.workspace = true
 repository.workspace = true
 description = "Transform node abstractions for the floxide framework"
+publish = true
 
 [dependencies]
-floxide-core = { path = "../floxide-core", version = "1.0.4" }
+floxide-core = { path = "../floxide-core", version = "1.0.9" }
 tokio = { workspace = true, features = ["full"] }
 async-trait = { workspace = true }
 thiserror = { workspace = true }
