--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "1.0.5"
+version = "1.0.10"
 edition = "2021"
 authors = ["Floxide Contributors"]
 license = "MIT"
@@ -37,6 +37,13 @@ rand = "0.8.5"
 tracing-subscriber = "0.3.18"
 criterion = "0.5.1"
 tokio-stream = "0.1.17"
+
+floxide-core = { path = "./crates/floxide-core" }
+floxide-transform = { path = "./crates/floxide-transform" }
+floxide-event = { path = "./crates/floxide-event" }
+floxide-timer = { path = "./crates/floxide-timer" }
+floxide-longrunning = { path = "./crates/floxide-longrunning" }
+floxide-reactive = { path = "./crates/floxide-reactive" }
 
 # Create a library target at the root to make examples work
 [package]
@@ -75,14 +82,14 @@ serde_json.workspace = true
 tokio-stream.workspace = true
 
 # Core crate (always included)
-floxide-core = { path = "./crates/floxide-core" }
+floxide-core = { path = "./crates/floxide-core", version = "1.0.9" }
 
 # Feature-gated dependencies on subcrates
-floxide-transform = { path = "./crates/floxide-transform", optional = true }
-floxide-event = { path = "./crates/floxide-event", optional = true }
-floxide-timer = { path = "./crates/floxide-timer", optional = true }
-floxide-longrunning = { path = "./crates/floxide-longrunning", optional = true }
-floxide-reactive = { path = "./crates/floxide-reactive", optional = true }
+floxide-transform = { path = "./crates/floxide-transform", version = "1.0.9", optional = true } 
+floxide-event = { path = "./crates/floxide-event", version = "1.0.9", optional = true }
+floxide-timer = { path = "./crates/floxide-timer", version = "1.0.9", optional = true }
+floxide-longrunning = { path = "./crates/floxide-longrunning", version = "1.0.9", optional = true }
+floxide-reactive = { path = "./crates/floxide-reactive", version = "1.0.9", optional = true }
 
 # Example configurations
 [[example]]
