--- a/crates/floxide-event/Cargo.toml
+++ b/crates/floxide-event/Cargo.toml
@@ -9,7 +9,7 @@ description = "Event-driven node abstractions for the floxide framework"
 publish = true
 
 [dependencies]
-floxide-core = { path = "../floxide-core", version = "1.0.9" }
+floxide-core = { path = "../floxide-core", version = "=1.0.11" }
 tokio = { workspace = true, features = ["full"] }
 async-trait = { workspace = true }
 thiserror = { workspace = true }
