--- a/crates/floxide-timer/Cargo.toml
+++ b/crates/floxide-timer/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["workflow", "timer", "scheduling", "async"]
 categories = ["asynchronous"]
 
 [dependencies]
-floxide-core = { path = "../floxide-core", version = "1.0.9" }
+floxide-core = { path = "../floxide-core", version = "=1.0.11" }
 async-trait = { workspace = true }
 chrono = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
