--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,10 +73,10 @@ jobs:
       - name: Bump version and tag commit
         if: ${{ inputs.skip_commit != 'true' }}
         run: |
-          # Run version bump for the workspace.
-          # With publish = false set for subcrates, only the main crate will be published.
+          # Run version bump with exact version pins for dependencies
           cargo workspaces version ${{ inputs.release_type }} \
             --yes --allow-branch main \
+            --exact \
             --no-git-push \
             ${{ inputs.dry_run == 'true' && '--dry-run' || '' }}
         env:
@@ -130,58 +130,3 @@ jobs:
             --token "${{ secrets.CRATES_IO_TOKEN }}" \
             --no-verify \
             ${{ inputs.dry_run == 'true' && '--dry-run' || '' }}
-
-      # ALTERNATIVE APPROACH - Using standard cargo commands
-      # Uncomment this section and comment out the cargo-workspaces approach if needed
-      #
-      # # 6. Alternative: Version bump with standard cargo
-      # - name: Bump version and tag commit (standard cargo)
-      #   if: ${{ inputs.skip_commit != 'true' }}
-      #   run: |
-      #     # Update version in the main crate's Cargo.toml
-      #     # Assuming the main crate is at the workspace root
-      #
-      #     # Extract current version
-      #     CURRENT_VERSION=$(grep -m 1 'version = ' Cargo.toml | sed 's/version = "\(.*\)"/\1/')
-      #     echo "Current version: $CURRENT_VERSION"
-      #
-      #     # Calculate new version based on semver bump level
-      #     if [[ "${{ inputs.release_type }}" == "patch" ]]; then
-      #       NEW_VERSION=$(echo $CURRENT_VERSION | awk -F. '{$NF = $NF + 1;} 1' OFS=.)
-      #     elif [[ "${{ inputs.release_type }}" == "minor" ]]; then
-      #       NEW_VERSION=$(echo $CURRENT_VERSION | awk -F. '{$(NF-1) = $(NF-1) + 1; $NF = 0;} 1' OFS=.)
-      #     elif [[ "${{ inputs.release_type }}" == "major" ]]; then
-      #       NEW_VERSION=$(echo $CURRENT_VERSION | awk -F. '{$1 = $1 + 1; $(NF-1) = 0; $NF = 0;} 1' OFS=.)
-      #     fi
-      #     echo "New version: $NEW_VERSION"
-      #
-      #     # Update version in Cargo.toml
-      #     sed -i "s/version = \"$CURRENT_VERSION\"/version = \"$NEW_VERSION\"/" Cargo.toml
-      #
-      #     # Commit the version change
-      #     git add Cargo.toml
-      #     git commit -m "Release v$NEW_VERSION"
-      #
-      #     # Add tag
-      #     git tag -a "v$NEW_VERSION" -m "Release v$NEW_VERSION"
-      #   env:
-      #     # Fix SSL certificate issues
-      #     NODE_EXTRA_CA_CERTS: /etc/ssl/certs/ca-certificates.crt
-      #     # Use token for authentication
-      #     CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
-      #
-      # # 9. Alternative: Publish with standard cargo
-      # - name: Publish main crate (standard cargo)
-      #   if: ${{ inputs.dry_run != 'true' }}
-      #   run: |
-      #     # Publish only the main crate
-      #     # If dry_run is true, use --dry-run flag
-      #     if [[ "${{ inputs.dry_run }}" == "true" ]]; then
-      #       cargo publish --dry-run
-      #     else
-      #       cargo publish
-      #     fi
-      #   env:
-      #     CARGO_REGISTRIES_CRATES_IO_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
-      #     CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
-      #     NODE_EXTRA_CA_CERTS: /etc/ssl/certs/ca-certificates.crt
