🦀 Implement Cyclic Workflows Feature and Update Documentation
Added support for cyclic workflows in the `Workflow` struct, allowing nodes to be revisited during execution. Introduced methods `allow_cycles` and `set_cycle_limit` to configure cycle behavior and limits. Updated the workflow execution logic to handle cycles appropriately, including error handling for cycle detection.

Additionally, created a new documentation file on cyclic workflows, detailing usage, best practices, and examples. Updated existing workflow documentation to reference the new cyclic workflows section. This enhancement provides users with more flexibility in designing workflows that require iterative processing or retry mechanisms.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,7 @@ nav:
     - Overview: core-concepts/overview.md
     - Nodes: core-concepts/nodes.md
     - Workflows: core-concepts/workflows.md
+    - Cyclic Workflows: core-concepts/cyclic-workflows.md
     - Actions: core-concepts/actions.md
     - Contexts: core-concepts/contexts.md
   - Guides:
@@ -92,5 +93,5 @@ nav:
     - floxide-timer: api/floxide-timer.md
     - floxide-reactive: api/floxide-reactive.md
     - floxide-longrunning: api/floxide-longrunning.md
-    - floxide-batch: api/floxide-batch.md 
+    - floxide-batch: api/floxide-batch.md
   - Contributing: contributing.md
