--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [workspace]
 members = [
     "crates/floxide-core",
-    "crates/floxide-transform",
-    "crates/floxide-event",
-    "crates/floxide-timer",
-    "crates/floxide-longrunning",
-    "crates/floxide-reactive",
+    # "crates/floxide-transform",
+    # "crates/floxide-event",
+    # "crates/floxide-timer",
+    # "crates/floxide-longrunning",
+    # "crates/floxide-reactive",
     "benches",
 ]
 resolver = "2"
@@ -37,13 +37,14 @@ rand = "0.8.5"
 tracing-subscriber = "0.3.18"
 criterion = "0.5.1"
 tokio-stream = "0.1.17"
+tokio-util = { version = "0.7.10", features = ["full"] }
 
 floxide-core = { path = "./crates/floxide-core" }
-floxide-transform = { path = "./crates/floxide-transform" }
-floxide-event = { path = "./crates/floxide-event" }
-floxide-timer = { path = "./crates/floxide-timer" }
-floxide-longrunning = { path = "./crates/floxide-longrunning" }
-floxide-reactive = { path = "./crates/floxide-reactive" }
+# floxide-transform = { path = "./crates/floxide-transform" }
+# floxide-event = { path = "./crates/floxide-event" }
+# floxide-timer = { path = "./crates/floxide-timer" }
+# floxide-longrunning = { path = "./crates/floxide-longrunning" }
+# floxide-reactive = { path = "./crates/floxide-reactive" }
 
 # Create a library target at the root to make examples work
 [package]
@@ -60,12 +61,12 @@ description.workspace = true
 [features]
 default = []
 # Define features with dependencies on subcrates
-transform = ["floxide-transform"]
-event = ["floxide-event"]
-timer = ["floxide-timer"]
-longrunning = ["floxide-longrunning"]
-reactive = ["floxide-reactive"]
-full = ["transform", "event", "timer", "longrunning", "reactive"]
+# transform = ["floxide-transform"]
+# event = ["floxide-event"]
+# timer = ["floxide-timer"]
+# longrunning = ["floxide-longrunning"]
+# reactive = ["floxide-reactive"]
+# full = ["transform", "event", "timer", "longrunning", "reactive"]
 
 [dependencies]
 # Core dependencies (always included)
@@ -85,52 +86,11 @@ tokio-stream.workspace = true
 floxide-core = { path = "./crates/floxide-core", version = "=1.1.2" }
 
 # Feature-gated dependencies on subcrates
-floxide-transform = { path = "./crates/floxide-transform", version = "=1.1.2", optional = true } 
-floxide-event = { path = "./crates/floxide-event", version = "=1.1.2", optional = true }
-floxide-timer = { path = "./crates/floxide-timer", version = "=1.1.2", optional = true }
-floxide-longrunning = { path = "./crates/floxide-longrunning", version = "=1.1.2", optional = true }
-floxide-reactive = { path = "./crates/floxide-reactive", version = "=1.1.2", optional = true }
-
-# Example configurations
-[[example]]
-name = "lifecycle_node"
-path = "examples/lifecycle_node.rs"
-required-features = []
-
-[[example]]
-name = "transform_node"
-path = "examples/transform_node.rs"
-required-features = ["transform"]
-
-[[example]]
-name = "order_processing"
-path = "examples/order_processing.rs"
-required-features = []
-
-[[example]]
-name = "batch_processing"
-path = "examples/batch_processing.rs"
-required-features = []
-
-[[example]]
-name = "event_driven_workflow"
-path = "examples/event_driven_workflow.rs"
-required-features = ["event"]
-
-[[example]]
-name = "reactive_node"
-path = "examples/reactive_node.rs"
-required-features = ["reactive"]
-
-[[example]]
-name = "timer_node"
-path = "examples/timer_node.rs"
-required-features = ["timer"]
-
-[[example]]
-name = "longrunning_node"
-path = "examples/longrunning_node.rs"
-required-features = ["longrunning"]
+# floxide-transform = { path = "./crates/floxide-transform", version = "=1.1.2", optional = true } 
+# floxide-event = { path = "./crates/floxide-event", version = "=1.1.2", optional = true }
+# floxide-timer = { path = "./crates/floxide-timer", version = "=1.1.2", optional = true }
+# floxide-longrunning = { path = "./crates/floxide-longrunning", version = "=1.1.2", optional = true }
+# floxide-reactive = { path = "./crates/floxide-reactive", version = "=1.1.2", optional = true }
 
 [profile.dev]
 opt-level = 0
