--- a/crates/floxide-core/Cargo.toml
+++ b/crates/floxide-core/Cargo.toml
@@ -8,10 +8,6 @@ repository.workspace = true
 description = "Core components of the floxide framework for directed graph workflows"
 publish = true
 
-[features]
-default = ["async"]
-async = ["dep:tokio"]
-
 [dependencies]
 async-trait = { workspace = true }
 futures = "0.3.29"
@@ -19,7 +15,8 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 uuid = { workspace = true, features = ["v4"] }
 serde = { workspace = true, features = ["derive"] }
-tokio = { workspace = true, features = ["time"], optional = true }
+tokio = { workspace = true, features = ["time"] }
+tokio-util = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full", "test-util"] }
