Add checkpointing functionality to floxide-core
- Introduced a new `Checkpoint` struct to manage workflow state, allowing serialization and deserialization of pending work and context.
- Implemented `CheckpointStore` trait for persisting and loading checkpoints, enabling workflows to resume from saved states.
- Enhanced the `workflow!` macro to support checkpointing, allowing workflows to save and restore their execution state.
- Added an in-memory checkpoint store example demonstrating the checkpointing and resuming of a simple counter workflow.
- Updated `lib.rs` to include the new checkpoint module and its components, ensuring integration with existing modules and workflows.

--- a/crates/floxide-core/Cargo.toml
+++ b/crates/floxide-core/Cargo.toml
@@ -15,8 +15,12 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 uuid = { workspace = true, features = ["v4"] }
 serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
 tokio = { workspace = true, features = ["time"] }
 tokio-util = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full", "test-util"] }
+
+[features]
+checkpoint = []
