Update documentation structure and add core concepts for Floxide framework
- Revised `mkdocs.yml` to improve navigation, adding a new "Home" section and reorganizing the "Core Concepts" and "Tutorial" sections.
- Introduced a new `index.md` file for the documentation homepage, providing an overview of the Floxide framework and its components.
- Created a new `core-concepts/index.md` file detailing the fundamental building blocks of the Floxide framework, including Nodes, Workflows, and Distributed Execution.
- Restored the "Contributing" section in the navigation to ensure contributors have access to necessary information.
- Updated the `serve-docs.sh` script to ensure proper execution permissions.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,8 +51,15 @@ plugins:
   - search
 
 nav:
-
-  - Floxide Tutorial:
+  - Home: index.md
+  - Core Concepts:
+      - Overview: core-concepts/index.md
+      # Add pages for each concept later, e.g.:
+      # - Node: core-concepts/01_node.md
+      # - Workflow: core-concepts/02_workflow.md
+      # - Transition: core-concepts/03_transition.md
+      # - Context: core-concepts/04_context.md
+  - Tutorial:
       - Introduction: floxide-tutorial/index.md
       - "Chapter 1: Transition Enum": floxide-tutorial/01__transition__enum_.md
       - "Chapter 2: Node Trait & node! Macro": floxide-tutorial/02__node__trait____node___macro_.md
