--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,9 @@ tokio-stream.workspace = true
 floxide-core = { path = "./crates/floxide-core", version = "=2.0.0" }
 floxide-macros = { path = "./crates/floxide-macros", version = "=2.0.0" }
 
+[dev-dependencies]
+rllm = "1.1.7"
+
 [profile.dev]
 opt-level = 0
 debug = true
