--- a/crates/floxide-core/Cargo.toml
+++ b/crates/floxide-core/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = { workspace = true }
 tokio = { workspace = true, features = ["time"] }
 tokio-util = { workspace = true }
 chrono.workspace = true
+rllm = "1.1.7"
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full", "test-util"] }
