--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,7 @@
 members = [
     "crates/floxide-core",
     "crates/floxide-macros",
-    # "crates/floxide-transform",
-    # "crates/floxide-event",
-    # "crates/floxide-timer",
-    # "crates/floxide-longrunning",
-    # "crates/floxide-reactive",
+    "crates/floxide-redis",
     "benches",
 ]
 resolver = "2"
@@ -39,9 +35,11 @@ tracing-subscriber = "0.3.18"
 criterion = "0.5.1"
 tokio-stream = "0.1.17"
 tokio-util = { version = "0.7.10", features = ["full"] }
+testcontainers = "0.23.3"
 
 floxide-core = { path = "./crates/floxide-core" }
 floxide-macros = { path = "./crates/floxide-macros" }
+floxide-redis = { path = "./crates/floxide-redis" }
 
 # Create a library target at the root to make examples work
 [package]
@@ -57,6 +55,7 @@ description.workspace = true
 # Define features
 [features]
 default = []
+redis = ["floxide-redis"]
 
 [dependencies]
 # Core dependencies (always included)
@@ -75,9 +74,11 @@ tokio-stream.workspace = true
 # Core crate (always included)
 floxide-core = { path = "./crates/floxide-core", version = "=2.0.0" }
 floxide-macros = { path = "./crates/floxide-macros", version = "=2.0.0" }
+floxide-redis = { path = "./crates/floxide-redis", version = "=2.0.0", optional = true }
 
 [dev-dependencies]
 rllm = "1.1.7"
+testcontainers = { workspace = true }
 
 [profile.dev]
 opt-level = 0
