--- a/crates/floxide-redis/Cargo.toml
+++ b/crates/floxide-redis/Cargo.toml
@@ -1,27 +1,27 @@
 [package]
-name = "floxide-core"
+name = "floxide-redis"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
 repository.workspace = true
-description = "Core components of the floxide framework for directed graph workflows"
+description = "Redis implementation for Floxide distributed workflow system"
 publish = true
 
 [dependencies]
+floxide-core = { path = "../floxide-core" }
 async-trait = { workspace = true }
-futures = "0.3.29"
 thiserror = { workspace = true }
 tracing = { workspace = true }
-uuid = { workspace = true, features = ["v4"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["time"] }
-tokio-util = { workspace = true }
-chrono.workspace = true
+chrono = { workspace = true }
+uuid = { workspace = true, features = ["v4"] }
+redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager", "json"] }
+futures = "0.3.29"
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full", "test-util"] }
-
-[features]
-checkpoint = []
+testcontainers = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
