--- a/crates/floxide-macros/Cargo.toml
+++ b/crates/floxide-macros/Cargo.toml
@@ -16,4 +16,7 @@ syn = { version = "2", features = ["full", "extra-traits"] }
 quote = "1"
 proc-macro2 = "1"
 heck = "0.4"
+
+[dev-dependencies]
+floxide-core = { path = "../floxide-core" }
  
