Enhance floxide-core with Redis context store and related updates
- Introduced `RedisContextStore` for managing workflow context in Redis, implementing the `ContextStore` trait.
- Updated `DistributedOrchestrator` and `DistributedWorker` to utilize the new context store.
- Refactored examples and tests to demonstrate the integration of Redis context management.
- Removed the deprecated `RedisCheckpointStore` and associated tests, streamlining the Redis integration.
- Updated `Cargo.lock` to include new dependencies for Redis context management.

--- a/crates/floxide-redis/Cargo.toml
+++ b/crates/floxide-redis/Cargo.toml
@@ -25,3 +25,5 @@ futures = "0.3.29"
 tokio = { workspace = true, features = ["full", "test-util"] }
 testcontainers = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
+floxide-macros = { path = "../floxide-macros" }
+rand = { workspace = true }
