--- a/crates/floxide-redis/Cargo.toml
+++ b/crates/floxide-redis/Cargo.toml
@@ -9,7 +9,7 @@ description = "Redis implementation for Floxide distributed workflow system"
 publish = true
 
 [dependencies]
-floxide-core = { path = "../floxide-core" }
+floxide-core = { path = "../floxide-core", version = "=3.0.1" }
 async-trait = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
