Add floxide-macros-support crate and integrate with floxide-macros
- Introduced a new crate `floxide-macros-support` for shared macro functionality.
- Updated `Cargo.toml` and `Cargo.lock` to include `floxide-macros-support` as a dependency.
- Refactored `floxide-macros` to utilize types from `floxide-macros-support`.
- Added tests for composite arms in `floxide-macros` to ensure correct parsing and functionality.
- Modified example workflow to return meaningful output based on input conditions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,9 @@
 members = [
     "crates/floxide-core",
     "crates/floxide-macros",
+    "crates/floxide-macros-support",
     "crates/floxide-redis",
-    "benches",
+    "benches", 
 ]
 resolver = "2"
 
