Update dependencies and enhance floxide-macros functionality
- Added new dependencies including `trybuild`, `glob`, `serde_spanned`, `target-triple`, `termcolor`, `toml`, `toml_datetime`, `toml_edit`, `toml_write`, and `winnow` in `Cargo.lock`.
- Updated `Cargo.toml` for `floxide-macros` to include `trybuild` as a development dependency.
- Enhanced the `workflow` macro in `floxide-macros` to include type assertions for direct edges, improving type safety.
- Fixed tests in `composite_arms.rs` to correctly assert wildcard behavior in edge definitions.
- Minor refactor in `floxide-macros-support` to clarify wildcard handling in variant bindings.

--- a/crates/floxide-macros/Cargo.toml
+++ b/crates/floxide-macros/Cargo.toml
@@ -27,3 +27,4 @@ floxide-macros-support = { path = "../floxide-macros-support" }
 
 [dev-dependencies]
 floxide = { path = "../.." }
+trybuild = "1.0.85"
