--- a/crates/floxide-macros/Cargo.toml
+++ b/crates/floxide-macros/Cargo.toml
@@ -13,6 +13,8 @@ proc-macro = true
 
 [dependencies]
 floxide-core = { path = "../floxide-core", version = "=3.1.0" }
+floxide-macros-support = { path = "../floxide-macros-support", version = "=3.1.0" }
+
 syn = { version = "2", features = ["full", "extra-traits"] }
 quote = "1"
 proc-macro2 = "1"
@@ -23,7 +25,6 @@ uuid.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
-floxide-macros-support = { path = "../floxide-macros-support" }
 
 [dev-dependencies]
 floxide = { path = "../.." }
